--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@ onclick="ga('send', 'event', 'cards', 'order', 'viabuy');">COMANDĂ CARDUL</butt
 onclick="ga('send', 'event', 'cards', 'order', 'sogexia');">COMANDĂ CARDUL</button>
     </article>
 
-
-    <article id="paysera">
+    <article id="paysera" hidden>
       <h2>Paysera</h2>
 	<data value="4" title="Patru stele"></data>
       <figure onclick="this.parentNode.getElementsByTagName('button')[0].click();">
